--- a/index.html
+++ b/index.html
@@ -32,50 +32,6 @@
         </div>
 
         <header>
-            <!--
-            <div id = "vsse_headerlogo">
-                <svg xmlns:dc="http://purl.org/dc/elements/1.1/"
-                    xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                    xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-                    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="210mm" height="297mm"
-                    viewBox="0 0 210 297" version="1.1" id="svg8" inkscape:version="0.92.4 (5da689c313, 2019-01-14)"
-                    sodipodi:docname="vas.svg">
-                    <defs id="defs2" />
-                    <sodipodi:namedview id="base" pagecolor="#ffffff" bordercolor="#666666" borderopacity="1.0"
-                        inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:zoom="0.49497475"
-                        inkscape:cx="-87.142857" inkscape:cy="560" inkscape:document-units="mm"
-                        inkscape:current-layer="layer1" showgrid="false" inkscape:window-width="1366"
-                        inkscape:window-height="706" inkscape:window-x="-8" inkscape:window-y="-8"
-                        inkscape:window-maximized="1" />
-                    <metadata id="metadata5">
-                        <rdf:RDF>
-                            <cc:Work rdf:about="">
-                                <dc:format>image/svg+xml</dc:format>
-                                <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-                                <dc:title></dc:title>
-                            </cc:Work>
-                        </rdf:RDF>
-                    </metadata>
-                    <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1">
-                        <rect
-                            style="fill:#ff0000;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                            id="rect4520" width="60" height="60" x="-87.355309" y="116.20126" transform="rotate(-45)" />
-                        <rect
-                            style="fill:#0000ff;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                            id="rect4520-6" width="60" height="60" x="-87.355309" y="176.20126"
-                            transform="rotate(-45)" />
-                        <rect
-                            style="fill:#00d000;fill-opacity:1;stroke:#008c00;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                            id="rect4520-6-7" width="60" height="60" x="-27.355309" y="176.20126"
-                            transform="rotate(-45)" />
-                        <rect
-                            style="fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                            id="rect4554" width="80" height="8" x="65.748299" y="230.18262" />
-                    </g>
-                </svg>
-
-            </div> -->
             <div class="vsse_headertext">V Software Solutions:<span id="vsse_headertextE">Elegance</span></div>
 
 
@@ -88,7 +44,8 @@
             <div class="vsse_headernav">
 
 
-                <li><a href="#vsse_bodyvision" class="vsse_headernavitem">WHY</a></li>
+                <!-- <li><a href="#vsse_bodyvision" class="vsse_headernavitem" id="vsse_bodyvisionnavwhy">WHY</a></li> -->
+                <li><a href="#" class="vsse_headernavitem" id="vsse_bodyvisionnavwhy">WHY</a></li>
 
                 <li><a href="#vsse_bodyweare" class="vsse_headernavitem">Who We Are</a></li>
 
@@ -136,7 +93,7 @@
         <!-- Nav Bar -->
 
         <div id="vsse_nav">
-            <a href="#vsse_bodyvision" class="vsse_navitem">
+            <a href="#" class="vsse_navitem" id = "vsse_navitemwhy">
                 <svg viewBox="0 0 600 600" width="100" height="100" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
                     <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
@@ -300,16 +257,24 @@
                                 title="Mr Daniel">
 
                         </div>
+                        <img src="car.jpg" id="vsse_bodyweareselectedcar">
 
                         <div id="vsse_bodyweareselected">
                             <div id="vsse_bodyweareselectedbox">
-                                <div class="vsse_bodyweareselbtn" id="vsse_bodyweareselimgprev" data-dir = "prev">&lt&lt</div>
+                                <div class="vsse_bodyweareselbtn" id="vsse_bodyweareselimgprev" data-dir="prev">&lt&lt
+                                </div>
                                 <div id="vsse_bodyweareselecteddesc">
                                     &lt&lt Select &gt&gt
                                 </div>
-                                <div class="vsse_bodyweareselbtn" id="vsse_bodyweareselimgnext" data-dir = "next">&gt&gt</div>
+                                <div class="vsse_bodyweareselbtn" id="vsse_bodyweareselimgnext" data-dir="next">&gt&gt
+                                </div>
                             </div>
+                            <div id="vsse_bodyweareselectedsolve">Solving your problems with a LICENSE.</div>
+                            <div id="vsse_bodyweareselectedtest">Test my LICENSE.</div>
+
                         </div>
+                        <!-- <img src="car.jpg" id="vsse_bodyweareselectedcar"> -->
+
                     </div>
                 </div>
 
@@ -550,7 +515,8 @@
                                         relevant personnels. We will get
                                         an in depth
                                         knowledge of the organisation in terms of workflow, management and human
-                                        resource structure. <div class="vsse_bodywedothen" id="vsse_bodywedostudythen" data-wedo = "study">(and then ...)</div>
+                                        resource structure. <div class="vsse_bodywedothen" id="vsse_bodywedostudythen"
+                                            data-wedo="study">(and then ...)</div>
                                     </p>
                                 </div>
                                 <div class="vsse_bodywedotext" id="vsse_bodywedosolutionstext">
@@ -564,7 +530,8 @@
                                         the business world revolves within this big big world. Together we will
                                         visionalise
                                         an optimal state of your future organisation structure.<div
-                                            class="vsse_bodywedothen" id="vsse_bodywedosolutionsthen" data-wedo = "vision">(and then ...)
+                                            class="vsse_bodywedothen" id="vsse_bodywedosolutionsthen"
+                                            data-wedo="vision">(and then ...)
                                         </div>
                                     </p>
                                 </div>
@@ -577,8 +544,8 @@
                                         stucture
                                         to the target organisation structure over times. We will identify all
                                         relevant
-                                        pathes to the vision.<div class="vsse_bodywedothen"
-                                            id="vsse_bodywedobridgethen" data-wedo = "bridge">(and then ...)</div>
+                                        pathes to the vision.<div class="vsse_bodywedothen" id="vsse_bodywedobridgethen"
+                                            data-wedo="bridge">(and then ...)</div>
                                     </p>
                                 </div>
                                 <div class="vsse_bodywedotext" id="vsse_bodywedoimplementationtext">
@@ -587,12 +554,11 @@
                                         <div class="vsse_bodyfirstofpara">T</div>his is where we put the words in
                                         our diligent
                                         study, comprehensive planning and far-sighted vision into actions:<br>
-                                        <div class="vsse_bodywedoimpact"
-                                            id="vsse_bodywedoimpactstudy">study, </div>, <div
-                                            class="vsse_bodywedoimpact" id="vsse_bodywedoimpactvision">vision, </div>,
-                                        <div class="vsse_bodywedoimpact" id="vsse_bodywedoimpactbridge">bridge, </div>,
+                                        <div class="vsse_bodywedoimpact" id="vsse_bodywedoimpactstudy">study, </div>
+                                        <div class="vsse_bodywedoimpact" id="vsse_bodywedoimpactvision">vision, </div>
+                                        <div class="vsse_bodywedoimpact" id="vsse_bodywedoimpactbridge">bridge, </div>
                                         <div class="vsse_bodywedoimpact" id="vsse_bodywedoimpactimplement">
-                                            implementation</div>.
+                                            implementation.</div>
                                     </p>
                                 </div>
                             </div>
@@ -683,9 +649,13 @@
 
                         <h1 class="vsse_bodylink">We Did:</h1>
                         <div id="vsse_bodywedidbox">
-                            <p><span id = "vsse_wedidvas">V-Accounting-System (VAS)</span> is a system that differentiates itself in a crowded market of
+
+                            <div id="vsse_wedidvas"><img src="vas.svg" alt="VAS"
+                                    id="vsse_wedidvaslogo">V-Accounting-System (VAS)</div>
+                            <p>is a system that stands out
+                                in a crowded market of
                                 accounting
-                                software with the following features:
+                                software with the following differentiating features:
                             </p>
 
                             <div id="vsse_bodywedidimgcont">
@@ -693,17 +663,60 @@
                                 <div id="vsse_bodywedidimgslidetext">V-Accounting-System</div>
                             </div>
 
-                            <p><span class="vsse_bodywedidfactor">Object-Oriented Navigation:</span> Options for further actions is just a right-click away on the
-                                object.
-                            </p>
-                            <p><span class="vsse_bodywedidfactor">Drill-Down:</span> Tracing of details of object requires just a double-click on the object.
-                            </p>
-                            <p><span class="vsse_bodywedidfactor">Tree-structured Data:</span> Ability to organise certain data objects in a tree-structure
-                                provides better analysis and reporting.
-                            </p>
-                            <p><span class="vsse_bodywedidfactor">User-Definition:</span> Customised setting is available from the screen color, font sizes to
-                                transaction controls to work flow management.
-                            </p>
+                            <table id="vsse_bodywedidtable">
+                                <col width="30%">
+                                <col width="70%">
+                                <tr>
+                                    <th>
+                                        Features
+                                    </th>
+                                    <th>
+                                        Remark
+                                    </th>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        Object-Oriented Navigation
+                                    </td>
+                                    <td>Options for
+                                        further
+                                        actions are conveniently accessible with a right-click on the object.
+                                    </td>
+                                <tr>
+                                    <td>
+                                        Drill-Down
+                                    </td>
+                                    <td>
+                                        Trails of document flows is easily
+                                        traceable
+                                        from the source object.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Tree-structured Data
+                                    </td>
+                                    <td>
+                                        Ability to organise
+                                        certain data objects in a tree-structure, multi-level organisation
+                                        provides meaningful and in depth analysis and reporting.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        User-Definition
+                                    </td>
+                                    <td>
+                                        <p>Customised settings are
+                                            available from the screen colors, font sizes of reports to
+                                            transactional controls to work flow management.</p>
+                                        <p id="vsse_bodywedidbuild">VAS IS A SYSTEM THAT BUILDS AN ACCOUNTING SYSTEM.
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+
                         </div>
                     </div>
                 </div>
@@ -736,14 +749,14 @@
                                 <li>Spoon
                                     <ul class="vsse_bodyweselllistcatitemsub">
                                         <li>Silver</li>
-                                        <li>wooder</li>
+                                        <li>Wooden</li>
                                         <li>Soup</li>
                                     </ul>
                                 </li>
                                 <li>Fork
                                     <ul class="vsse_bodyweselllistcatitemsub">
                                         <li>Lift</li>
-                                        <li>Er</li>
+                                        <li>Ker</li>
                                     </ul>
                                 </li>
                                 <li>Plate</li>
@@ -816,6 +829,47 @@
 
                             <div id=vsse_bodywhereusmap>
                                 <a href="https://goo.gl/maps/SeyDikHfhYoijwnb6">Us on Map >>:</a>
+                            </div>
+                            <div id=vsse_bodywhereusmap>
+                                <a href="mailto:teckpio@gmail.com" title="teckpio@gmail.com">Us on Virtual Mail System
+                                    >>:</a>
+                                <svg xmlns:dc="http://purl.org/dc/elements/1.1/"
+                                    xmlns:cc="http://creativecommons.org/ns#"
+                                    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                                    xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                                    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="50px"
+                                    height="50px" viewBox="0 0 210 297" version="1.1" id="svg831"
+                                    inkscape:version="0.92.4 (5da689c313, 2019-01-14)" sodipodi:docname="email.svg"
+                                    title="teckpio@gmail.com">
+                                    <defs id="defs825" />
+                                    <sodipodi:namedview id="base" pagecolor="#ffffff" bordercolor="#666666"
+                                        borderopacity="1.0" inkscape:pageopacity="0.0" inkscape:pageshadow="2"
+                                        inkscape:zoom="0.7" inkscape:cx="380.69639" inkscape:cy="560"
+                                        inkscape:document-units="mm" inkscape:current-layer="layer1" showgrid="false"
+                                        inkscape:window-width="1366" inkscape:window-height="706" inkscape:window-x="-8"
+                                        inkscape:window-y="-8" inkscape:window-maximized="1" />
+                                    <metadata id="metadata828">
+                                        <rdf:RDF>
+                                            <cc:Work rdf:about="">
+                                                <dc:format>image/svg+xml</dc:format>
+                                                <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                                                <dc:title></dc:title>
+                                            </cc:Work>
+                                        </rdf:RDF>
+                                    </metadata>
+                                    <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1">
+                                        <path
+                                            style="fill:none;stroke:#000000;stroke-width:12;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;stroke-miterlimit:4;stroke-dasharray:none"
+                                            d="m 26.080357,101.96428 c 0,98.65179 0,98.65179 0,98.65179 l 158.750003,-1.13393 -1.13393,-97.89583 z"
+                                            id="path1380" inkscape:connector-curvature="0" />
+                                        <path
+                                            style="fill:none;stroke:#000000;stroke-width:12;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;stroke-miterlimit:4;stroke-dasharray:none"
+                                            d="m 26.080357,101.96428 c 72.193451,52.5387 65.38988,53.67263 83.532733,53.67263 18.14287,0 74.08334,-54.0506 74.08334,-54.0506"
+                                            id="path1390" inkscape:connector-curvature="0" sodipodi:nodetypes="csc" />
+                                    </g>
+                                </svg>
+
                             </div>
                         </div>
                     </div>
