--- a/index.html
+++ b/index.html
@@ -42,31 +42,28 @@
 -->
 
             <div class="vsse_headernav">
+                <li><a href="#" class="vsse_headernavitem" id="vsse_bodyvisionnavwhy">WHY</a>
+                </li>
 
-
-                <!-- <li><a href="#vsse_bodyvision" class="vsse_headernavitem" id="vsse_bodyvisionnavwhy">WHY</a></li> -->
-                <li><a href="#" class="vsse_headernavitem" id="vsse_bodyvisionnavwhy">WHY</a></li>
-
-                <li><a href="#vsse_bodyweare" class="vsse_headernavitem">Who We Are</a></li>
+                <li><a href="#vsse_bodyweare" class="vsse_headernavitem">Who We Are</a>
+                </li>
 
                 <li><a href="#vsse_bodywedo" class="vsse_headernavitem">What We Do
-                        <!--<ul class="vsse_headernavitemsub" id="vsse_headernavitemdosub">
-                                <li>Web Page Design</li>
-                                <li>Business Software Solution</li>
-                            </ul>-->
-                    </a></li>
+                    </a>
+                </li>
 
-                <li><a href="#vsse_bodyhow" class="vsse_headernavitem">How</a></li>
+                <li><a href="#vsse_bodyhow" class="vsse_headernavitem">How</a>
+                </li>
 
-                <li><a href="#vsse_bodywedid" class="vsse_headernavitem">What We Did</a></li>
+                <li><a href="#vsse_bodywedid" class="vsse_headernavitem">What We Did</a>
+                </li>
 
                 <li><a href="#vsse_bodywesell" class="vsse_headernavitem">What We Sell
-                        <!--<ul class="vsse_headernavitemsub" id="vsse_headernavitemsellsub">
-                                
-                            </ul>-->
-                    </a></li>
+                    </a>
+                </li>
 
-                <li><a href="#vsse_bodywhere" class="vsse_headernavitem"><i class="fas fa-home"></i>Find Us</a></li>
+                <li><a href="#vsse_bodywhere" class="vsse_headernavitem">Find Us</a>
+                </li>
             </div>
 
         </header>
@@ -93,7 +90,7 @@
         <!-- Nav Bar -->
 
         <div id="vsse_nav">
-            <a href="#" class="vsse_navitem" id = "vsse_navitemwhy">
+            <a href="#" class="vsse_navitem" id="vsse_navitemwhy">
                 <svg viewBox="0 0 600 600" width="100" height="100" xmlns="http://www.w3.org/2000/svg"
                     xmlns:svg="http://www.w3.org/2000/svg">
                     <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
@@ -593,13 +590,6 @@
                                 <img src="desert.jpg" alt="desert" class="vsse_bodyhowimg" id="vsse_bodyhowimgdesert">
                             </div>
 
-                            <h3 id="vsse_bodyhowparasea">We <div class="vsse_bodyhowaction" id="vsse_bodyhowactiondive">
-                                    dive
-                                </div> into the bottom of the deepest sea.</h3>
-                            <div id="vsse_bodyhowimgsea">
-                                <img src="sea.jpg" alt="ocean" class="vsse_bodyhowimg">
-                            </div>
-
                             <div id="vsse_bodyhowimgmountain">
                                 <img src="mountain.jpg" alt="mountain" class="vsse_bodyhowimg"
                                     id="vsse_bodyhowimgmountain">
@@ -611,6 +601,13 @@
                                     id="vsse_bodyhowactiontrek">|t|r/e\k/</span> through the thickest jungle.</h3>
                             <div id="vsse_bodyhowimgjungle">
                                 <img src="jungle.jpg" alt="jungle" class="vsse_bodyhowimg" id="vsse_bodyhowimgjungle">
+                            </div>
+
+                            <h3 id="vsse_bodyhowparasea">We <div class="vsse_bodyhowaction" id="vsse_bodyhowactiondive">
+                                    dive
+                                </div> into the bottom of the deepest sea.</h3>
+                            <div id="vsse_bodyhowimgsea">
+                                <img src="sea.jpg" alt="ocean" class="vsse_bodyhowimg">
                             </div>
                         </div>
                     </div>
