--- a/index.html
+++ b/index.html
@@ -705,9 +705,9 @@
                                         User-Definition
                                     </td>
                                     <td>
-                                        <p>Customised settings are
-                                            available from the screen colors, font sizes of reports to
-                                            transactional controls to work flow management.</p>
+                                        Customised settings are
+                                        available from the screen colors, font sizes of reports to
+                                        transactional controls to work flow management.
                                         <p id="vsse_bodywedidbuild">VAS IS A SYSTEM THAT BUILDS AN ACCOUNTING SYSTEM.
                                         </p>
                                     </td>
