--- a/index.html
+++ b/index.html
@@ -539,9 +539,7 @@
                                         where we
                                         want to go. We will build a bridge connecting the current organisation
                                         stucture
-                                        to the target organisation structure over times. We will identify all
-                                        relevant
-                                        pathes to the vision.<div class="vsse_bodywedothen" id="vsse_bodywedobridgethen"
+                                        to the visionalised organisation structure over the valley of times.<div class="vsse_bodywedothen" id="vsse_bodywedobridgethen"
                                             data-wedo="bridge">(and then ...)</div>
                                     </p>
                                 </div>
@@ -708,7 +706,7 @@
                                         Customised settings are
                                         available from the screen colors, font sizes of reports to
                                         transactional controls to work flow management.
-                                        <p id="vsse_bodywedidbuild">VAS IS A SYSTEM THAT BUILDS AN ACCOUNTING SYSTEM.
+                                        <p id="vsse_bodywedidbuild">VAS IS A SYSTEM THAT BUILDS ACCOUNTING AND MANAGEMENT SYSTEMS.
                                         </p>
                                     </td>
                                 </tr>
