--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
                         <h1 class="vsse_bodylink">We Did:</h1>
                         <div id="vsse_bodywedidbox">
 
-                            <div id="vsse_wedidvas"><img src="vas.svg" alt="VAS"
-                                    id="vsse_wedidvaslogo">V-Accounting-System (VAS)</div>
+                            <div id="vsse_wedidvas"><a href="vas.html"><img src="vas.svg" alt="VAS"
+                                    id="vsse_wedidvaslogo"></a>V-Accounting-System (VAS)</div>
                             <p>is a system that stands out
                                 in a crowded market of
                                 accounting
