--- a/home.html
+++ b/home.html
@@ -31,6 +31,9 @@
 
                 <div id="home_dboard_object" class="home_dboard_item">
                     <p>Object</p>
+                    <div id="home_dboard_objectEntity">Entity</div>
+                    <div id="home_dboard_objectTrans">Transaction</div>
+                    <div  id="home_dboard_objectReport">Report</div>
                 </div>
 
                 <div id="home_dboard_trans" class="home_dboard_item">
