--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
                             <div class=vsse_bodyweareservice2>At YOUR service ... <br><span>(and Her Majesty
                                     too).</span></div>
 
-                            <img src="who1.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg11"
+                            <img src="./img/who1.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg11"
                                 title="Mr Daniel">
-                            <img src="who2.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg12"
+                            <img src="./img/who2.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg12"
                                 title="Mr Daniel">
-                            <img src="who3.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg13"
+                            <img src="./img/who3.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg13"
                                 title="Mr Daniel">
-                            <img src="who4.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg14"
+                            <img src="./img/who4.jpg" alt="CEO" class="vsse_bodyweareimg2" id="vsse_bodyweareimg14"
                                 title="Mr Daniel">
 
                         </div>
@@ -585,11 +585,11 @@
                             <h3 id="vsse_bodyhowparadesert">We <span class="vsse_bodyhowaction"
                                     id="vsse_bodyhowactionrun">run</span> across the largest desert.</h3>
                             <div id="vsse_bodyhowimgdesert">
-                                <img src="desert.jpg" alt="desert" class="vsse_bodyhowimg" id="vsse_bodyhowimgdesert">
+                                <img src="./img/desert.jpg" alt="desert" class="vsse_bodyhowimg" id="vsse_bodyhowimgdesert">
                             </div>
 
                             <div id="vsse_bodyhowimgmountain">
-                                <img src="mountain.jpg" alt="mountain" class="vsse_bodyhowimg"
+                                <img src="./img/mountain.jpg" alt="mountain" class="vsse_bodyhowimg"
                                     id="vsse_bodyhowimgmountain">
                             </div>
 
@@ -598,14 +598,14 @@
                             <h3 id="vsse_bodyhowparajungle">We <span class="vsse_bodyhowaction"
                                     id="vsse_bodyhowactiontrek">|t|r/e\k/</span> through the thickest jungle.</h3>
                             <div id="vsse_bodyhowimgjungle">
-                                <img src="jungle.jpg" alt="jungle" class="vsse_bodyhowimg" id="vsse_bodyhowimgjungle">
+                                <img src="./img/jungle.jpg" alt="jungle" class="vsse_bodyhowimg" id="vsse_bodyhowimgjungle">
                             </div>
 
                             <h3 id="vsse_bodyhowparasea">We <div class="vsse_bodyhowaction" id="vsse_bodyhowactiondive">
                                     dive
                                 </div> into the bottom of the deepest sea.</h3>
                             <div id="vsse_bodyhowimgsea">
-                                <img src="sea.jpg" alt="ocean" class="vsse_bodyhowimg">
+                                <img src="./img/sea.jpg" alt="ocean" class="vsse_bodyhowimg">
                             </div>
                         </div>
                     </div>
@@ -654,7 +654,7 @@
                             </p>
 
                             <div id="vsse_bodywedidimgcont">
-                                <img src="did1.png" class="vsse_bodywedidimg" id="vsse_bodywedidimgslide">
+                                <img src="./img/did1.png" class="vsse_bodywedidimg" id="vsse_bodywedidimgslide">
                                 <div id="vsse_bodywedidimgslidetext">V-Accounting-System</div>
                             </div>
 
@@ -809,10 +809,10 @@
                                     id="vsse_bodywherebtnlblnext">&gt</label>
 
                                 <figure id="vsse_bodywheresliderimg">
-                                    <img src="banner_bg5.jpg">
-                                    <img src="banner_bg2.jpg">
-                                    <img src="banner_bg3.jpg">
-                                    <img src="banner_bg4.jpg">
+                                    <img src="./img/banner_bg5.jpg">
+                                    <img src="./img/banner_bg2.jpg">
+                                    <img src="./img/banner_bg3.jpg">
+                                    <img src="./img/banner_bg4.jpg">
                                 </figure>
                             </div>
 
