--- a/index.html
+++ b/index.html
@@ -539,8 +539,9 @@
                                         where we
                                         want to go. We will build a bridge connecting the current organisation
                                         stucture
-                                        to the visionalised organisation structure over the valley of times.<div class="vsse_bodywedothen" id="vsse_bodywedobridgethen"
-                                            data-wedo="bridge">(and then ...)</div>
+                                        to the visionalised organisation structure over the valley of times.<div
+                                            class="vsse_bodywedothen" id="vsse_bodywedobridgethen" data-wedo="bridge">
+                                            (and then ...)</div>
                                     </p>
                                 </div>
                                 <div class="vsse_bodywedotext" id="vsse_bodywedoimplementationtext">
@@ -585,7 +586,8 @@
                             <h3 id="vsse_bodyhowparadesert">We <span class="vsse_bodyhowaction"
                                     id="vsse_bodyhowactionrun">run</span> across the largest desert.</h3>
                             <div id="vsse_bodyhowimgdesert">
-                                <img src="./img/desert.jpg" alt="desert" class="vsse_bodyhowimg" id="vsse_bodyhowimgdesert">
+                                <img src="./img/desert.jpg" alt="desert" class="vsse_bodyhowimg"
+                                    id="vsse_bodyhowimgdesert">
                             </div>
 
                             <div id="vsse_bodyhowimgmountain">
@@ -598,7 +600,8 @@
                             <h3 id="vsse_bodyhowparajungle">We <span class="vsse_bodyhowaction"
                                     id="vsse_bodyhowactiontrek">|t|r/e\k/</span> through the thickest jungle.</h3>
                             <div id="vsse_bodyhowimgjungle">
-                                <img src="./img/jungle.jpg" alt="jungle" class="vsse_bodyhowimg" id="vsse_bodyhowimgjungle">
+                                <img src="./img/jungle.jpg" alt="jungle" class="vsse_bodyhowimg"
+                                    id="vsse_bodyhowimgjungle">
                             </div>
 
                             <h3 id="vsse_bodyhowparasea">We <div class="vsse_bodyhowaction" id="vsse_bodyhowactiondive">
@@ -646,7 +649,7 @@
                         <div id="vsse_bodywedidbox">
 
                             <div id="vsse_wedidvas"><a href="vas.html"><img src="vas.svg" alt="VAS"
-                                    id="vsse_wedidvaslogo"></a>V-Accounting-System (VAS)</div>
+                                        id="vsse_wedidvaslogo"></a>V-Accounting-System (VAS)</div>
                             <p>is a system that stands out
                                 in a crowded market of
                                 accounting
@@ -706,12 +709,18 @@
                                         Customised settings are
                                         available from the screen colors, font sizes of reports to
                                         transactional controls to work flow management.
-                                        <p id="vsse_bodywedidbuild">VAS IS A SYSTEM THAT BUILDS ACCOUNTING AND MANAGEMENT SYSTEMS.
+                                        <p id="vsse_bodywedidbuild">VAS IS A SYSTEM THAT BUILDS ACCOUNTING AND
+                                            MANAGEMENT SYSTEMS.
                                         </p>
                                     </td>
                                 </tr>
                             </table>
 
+                        </div>
+                        <div id="vsse_bodywedidbox2">
+                            <div id="vsse_wedidvms"><a href="vms.html"><img src="building.svg" alt="VAS"
+                                        id="vsse_wedidvaslogo"></a>Vehicle Management System (VMS)
+                            </div>
                         </div>
                     </div>
                 </div>
