--- a/report.html
+++ b/report.html
@@ -17,7 +17,10 @@
         <navbar id='navbar'>
             <p>NavBar</p>
             <input type = "file" id = "navbarfilebutton"/>
+            <br><br>
             <button id='navbargetBtn'>Get</button>
+            <br><br>
+            <button id='navbaroutputBtn'>Output</button>
 
         </navbar>
 
